--- a/LdapGroupMapping/.classpath
+++ b/LdapGroupMapping/.classpath
@@ -17,5 +17,7 @@
 			<attribute name="javadoc_location" value="jar:file:/Users/krishdey/.m2/repository/log4j/log4j/1.2.17/log4j-1.2.17-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/hadoop-common"/>
+	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
