--- a/LdapGroupMapping/pom.xml
+++ b/LdapGroupMapping/pom.xml
@@ -24,6 +24,14 @@
 			<version>1.7.5</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<sourceDirectory>src/java</sourceDirectory>
