--- a/HadoopMultiRegionGroupMapping/src/main/resources/log4j.properties
+++ b/HadoopMultiRegionGroupMapping/src/main/resources/log4j.properties
@@ -14,7 +14,7 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 #############################################################################
-log4j.rootCategory=WARN, stdout, R
+log4j.rootCategory=INFO, stdout, R
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -57,3 +57,5 @@ log4j.logger.org.apache.directory.shared.ldap.aci=WARN
 log4j.logger.org.apache.directory.server.xdbm.impl.avl=WARN
 log4j.logger.org.apache.directory.server.ldap=WARN
 log4j.logger.org.apache.activemq=WARN
+log4j.logger.com.krish=INFO
+
